--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@mui/system": "^7.1.1",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "bootstrap-icons": "^1.13.1",
     "framer-motion": "^12.16.0",
+    "lucide-react": "^0.515.0",
     "notistack": "^3.0.2",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
@@ -27,6 +29,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
     "styled-components": "^6.1.18",
     "swiper": "^11.2.8"
   },
