--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 VITE_BASE_URL=https://ifx-be-orcadehubs-projects.vercel.app
 VITE_LOCAL_BASE_URL=http://localhost:4000
+WS_BASE_URL= ws://localhost:4000
+WS_PROD_URL= wss://ifx-be-orcadehubs-projects.vercel.app
