--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "recharts": "^2.15.3",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.18",
-    "swiper": "^11.2.8"
+    "swiper": "^11.2.8",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
