--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.18",
     "swiper": "^11.2.8",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
